# Victor-Discord-Bot

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  railway.json
.github/: copilot-instructions.md
src/: __init__.py  discord_bot.py  orchestrator.py
src/agents/: __init__.py  citation_builder.py  content_scraper.py  discord_notifier.py  hallucination_detector.py  query_planner.py  report_generator.py  summarizer.py  topic_categorizer.py  web_search.py
src/cache/: __init__.py  manager.py  mongodb_store.py  redis_cache.py  subscription_store.py
src/config/: __init__.py  settings.py
src/models/: __init__.py  cache.py  research.py  subscription.py
src/scheduler/: __init__.py  subscription_worker.py
src/utils/: __init__.py  logger.py  source_prioritizer.py  validators.py
tests/: test_discord_bot_safety.py  test_subscription_store_create.py  test_subscription_worker.py
